# IDES

./: .env.example  .gitignore  ARCHITECTURE.md  CLI.md  DEPLOY.md  README.md  config.yaml  dev_plan.md  pyproject.toml
documentation/: api-reference.md  architecture.md  configuration.md  contributing.md  deployment.md  installation.md  usage-guide.md
ides/: cli.py  config.py  main.py  models.py  security.py
ides/agent/: brain.py  tools.py
ides/agent/skills/: general_document.md  invoice_extraction.md  offer_extraction.md
ides/api/: admin.py  jobs.py
ides/extractors/: base.py  images.py  ocr.py  text_layer.py  vision.py
ides/fusion/: llm_merge.py  rules.py
ides/llm/: client.py  prompts.py
ides/pipeline/: orchestrator.py  page_plan.py  prefilter.py
ides/storage/: database.py  file_store.py  job_store.py
ides/utils/: image_ops.py  pdf_ops.py
tests/: conftest.py  test_api.py  test_cli.py  test_extractors.py  test_fusion.py  test_pipeline.py  test_storage.py
